# fractles

./: .gitignore  CMakeLists.txt  Fractles.cpp  README.md  drawing.h  fractalwindow.h  gradient.h  gradienteditor.h  gui.h  image.h  mycolors.h  mymaths.h  rendering.h  textrenderer.h  uicomponents.h
src/: Fractles.cpp  fractalwindow.h  gradient.h  gui.h  image.h  mymaths.h  rendering.h  uicomponents.h
